# secure-string

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  todo.md
.github/workflows/: mypy.yml  python-package.yml
src/secure_string/: __init__.py  secure_string_context.py  secure_string_exceptions.py  secure_string_itself.py  secure_string_strict_context.py  secure_string_strict_exceptions.py
tests/: pytest__secure_string_itself.py
